--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ h1{
     border: none;
     border-radius: 10px;
     cursor:pointer;
+    transition: background 0.3s ease;
 }
 button:hover{
     background-color: #000000;
